add computational heavy service for testing
